# KSP-Price-Notifier

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  Pipfile  README.md  README.rst  price-notifier.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  deploy.yml  push.yml  python-tests.yml  test-deploy.yml
ksp_price_notifier/: __init__.py  __main__.py  get_price.py  price-notifier.py
tests/: test_get_price.py
