[tool.poetry]
name = "ksp-price-notifier"
version = "0.1.0"
description = ""
authors = ["Bar Hochman <bhochman@paloaltonetworks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
click = "8.0.0"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
pre-commit = "^2.17.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
