[tool.poetry]
name = "ksp-price-notifier"
version = "0.1.5"
description = ""
authors = ["Jochman"]
homepage = "https://github.com/jochman/KSP-Price-Notifier"
repository = "https://github.com/jochman/KSP-Price-Notifier"
license = "MIT"
include = [
    "LICENSE",
    "CHANGELOG.md"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
readme = "README.md"

[tool.poetry.scripts]
ksp-price-notifier = 'ksp_price_notifier.__main__:app'

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
click = "8.0.0"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
pre-commit = "^2.17.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
